--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 body {
     background: #E5E5E5;
     position:fixed;
-
+  
 }
 
 
@@ -19,7 +19,7 @@ body {
     background: #ffffff;
     width: 375px;
     margin-left: 200%;
-    margin-top: 50px;
+    margin-top: 85px;
     border-radius: 0px 14px;
     position: relative;
 
@@ -149,7 +149,9 @@ section {
 
 }
 .fundo {
-position:absolute;
+    width: 100vw;
+    height:100vh;
+    position:absolute;
     opacity: 0.8;
 
 }
