--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,15 @@
 body {
     background: #E5E5E5;
     position:fixed;
+    width: 100vw;
   
+}
+.fundo {
+    width: 100vw;
+    height:100vh;
+    position:absolute;
+    opacity: 0.8;
+
 }
 
 
@@ -20,8 +28,9 @@ body {
     width: 375px;
     margin-left: 200%;
     margin-top: 85px;
+    margin-left: 40vw;
     border-radius: 0px 14px;
-    position: relative;
+    position: absolute;
 
 }
 
@@ -146,12 +155,5 @@ section {
 
     margin: 15px auto;
     display: block;
-
-}
-.fundo {
-    width: 100vw;
-    height:100vh;
-    position:absolute;
-    opacity: 0.8;
 
 }
