--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,8 @@ body {
 }
 .fundo {
     width: 100vw;
-    height:100vh;
-    position:absolute;
+    height: 95vh;
+    position: absolute;
     opacity: 0.8;
 
 }
@@ -27,10 +27,10 @@ body {
     background: #ffffff;
     width: 375px;
     height: auto;
-    margin:40px 0 40px 0;
+    margin:50px 0px 40px ;
     margin-left: 40vw;
     border-radius: 0px 14px;
-    position: absolute;
+    position: fixed;
 
 }
 
@@ -51,6 +51,7 @@ h1 {
 
 main {
     padding: 24px;
+    padding-top: 20px;
 
 }
 
@@ -157,11 +158,12 @@ section {
     display: block;
 
 }
-@media screen and ( max-width: 700px) {
+@media screen and ( max-width: 600px) {
    
 .container {
     background: #ffffff;
     width: 100vw;
+    height: 100vh;
     margin-left: auto;
     margin-top: 0px;
     margin-left:0;
@@ -169,10 +171,22 @@ section {
     position: absolute;   
 }
 
+button {
+    width: 90vw;
+    display: inline-block;
+    margin: auto;
+    margin-top: 14;
+    
+}
+main {
+    margin-top: 14px;
+}
+
 .fundo {
     width: 0;
     height: 0;
 }
+
 
     
 }
