--- a/styles.css
+++ b/styles.css
@@ -160,15 +160,17 @@ section {
 @media screen and ( max-width: 600px) {
    
 .container {
+    margin-left: 0;
     background: #ffffff;
     width: 100vw;
     height: 100vh;
-    margin-left: auto;
+    
     margin-top: 0px;
     margin-left:0;
     border-radius: 0px 14px;
-    position: absolute;   
+    position: relative;   
 }
+
 
 button {
     width: 90vw;
@@ -180,7 +182,32 @@ button {
     width: 0;
     height: 0;
 }
-
-
+}
+@media screen and ( max-height: 670px) {
+   
+    .container {
+        background: #ffffff;
+        width: 100vw;
+        height: 100vh;
+        margin-top: 0px;
+        margin-left:0;
+        border-radius: 0px 14px;
+        position: relative;   
+    }
     
+    button {
+        width: 90vw;
+        display: inline-block;
+        margin: auto;
+    }
+    
+    .fundo {
+        width: 0;
+        height: 0;
+    }
+
+    .assets {
+    display: none;
+      
+    }
 }
